# steam-deck-remapper

./: Cargo.toml  config.example.toml  flake.nix
nix/: hm-module.nix
src/: axis.rs  config.rs  key.rs  main.rs
